@@ -39,7 +39,7 @@ public class FailedTestMapTest extends TestCase {
     assertEquals(other.getClass().getName(), mMap.getClass().getName());
     assertNotSame(other.getClass(), mMap.getClass());
     Method m = other.getClass().getMethod("getLastFailure", new Class[] {String.class, String.class, int.class});
-    String ret = (String)m.invoke(other, new Object[] {"DummyClass", "dummyMethod", Integer.valueOf(0)});
+    String ret = (String)m.invoke(other, new Object[] {"DummyClass", "dummyMethod", new Integer(0)});
     assertEquals("dummyTest1", ret);
   }
 
